--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
  			<div class="card">
  				<div class="card-body">
  					<!-- start editing here -->
- 					<h4 class="card-title">your name (pronouns) <!-- TODO: edit this --></h4>
- 					<h5 class="card-subtitle">year in school // major <!-- TODO: edit this --></h5>
- 					<p class="card-text">classes you are taking <!-- TODO: edit this --></p>
- 					<p class="card-text">fun fact about you <!-- TODO: edit this --></p>
+ 					<h4 class="card-title">Jewel (she/her) </h4>
+ 					<h5 class="card-subtitle">Freshman // Statistics </h5>
+ 					<p class="card-text">MATH 221, STAT 107, CS 124, LAS 101 </p>
+ 					<p class="card-text">I got barricade for Katseye at Lollapalooza this summer! </p>
  					<!-- stop editing here -->
  				</div>
  			</div>
